translate term of use

--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -403,28 +403,6 @@
   "Freinds":"الأصدقاء",
   "Search...":"البحث...",
   "\"Evento\" App Usage Policy": "سياسة الاستخدام لتطبيق \"إيفينتو\"",
-  "1. Introduction": "1. مقدمة",
-  "\"Evento\" is a digital platform specialized in marketing and booking community events. Please read these terms of use carefully before using the app to ensure your understanding and agreement with these terms.": "تطبيق \"إيفينتو\" هو منصة رقمية متخصصة في تسويق وحجز الفعاليات المجتمعية. يُرجى قراءة شروط الاستخدام هذه بعناية قبل استخدام التطبيق لضمان فهمك وموافقتك على هذه الشروط.",
-  "2. Acceptance of Terms": "2. قبول الشروط",
-  "By using the \"Evento\" app, you agree to comply with these terms of use. If you do not agree to these terms, you must immediately stop using the app.": "باستخدامك لتطبيق \"إيفينتو\"، أنت توافق على الالتزام بشروط الاستخدام هذه. إذا كنت لا توافق على هذه الشروط، يجب عليك التوقف فورًا عن استخدام التطبيق.",
-  "3. Account Registration and Security": "3. تسجيل الحساب والأمان",
-  "Account Creation body": "• إنشاء الحساب: يجب تقديم معلومات دقيقة وكاملة عند إنشاء حسابك. يشمل ذلك اسمك، سنك، ورقم الهاتف الخلوي.\n• أمان الحساب: المستخدم مسؤول عن الحفاظ على سرية كلمة المرور وأي معلومات تسجيل أخرى. يجب إبلاغ الإدارة فورًا عن أي استخدام غير مصرح به لحسابك.",
-  "4. Use of the App": "4. استخدام التطبيق",
-  "Use of the App body": "• الاستخدام القانوني: يجب استخدام التطبيق بطريقة قانونية ومسؤولة. يُحظر استخدام التطبيق لأي أغراض غير قانونية أو محظورة.\n• المحتوى المحظور: يُمنع نشر أو تحميل محتوى ينتهك حقوق الآخرين، يحتوي على تهديدات، فحش أو إخلال بالآداب أو الأخلاق العامة، أو يخالف القوانين المحلية والدولية.",
-  "5. Intellectual Property Rights": "5. حقوق الملكية الفكرية",
-  "intellectualPropertyRights":"• حقوق التطبيق: جميع المحتويات الموجودة على التطبيق، بما في ذلك النصوص، الرسومات، والشعارات، محمية بحقوق الملكية الفكرية وتعود ملكيتها لتطبيق \"إيفينتو\" أو لمزودي المحتوى ومزودي الخدمة المسجلين والمعتمدين في التطبيق",
-"6. Event Advertising":"6. التسجيل كمزود خدمة",
-"registrationAsServiceProvider":"• التسجيل كمزود خدمة يقتضي الامتثال لكافة القوانين واللوائح الوطنية الناظمة لحماية المستهلك والمنافسة التجارية وكافة القوانين الأخرى ذات الصلة.• التسجيل كمزود خدمة على التطبيق يقتضي التعاقد مع التطبيق بشروط استخدام منفصلة."
-,"7. Registration as a Service Provider":"7. طلب تنظيم فعاليات والإعلان عنها عبر التطبيق"
-,"restaurantBookingPayment":"• لا يعلن التطبيق عن أية فعالية قبل دراسة طلب تنظيمها وإجازتها من التطبيق.•لا تعتبر العلاقات العقدية الناشئة عن الفعالية نافذة إلا عند موافقة التطبيق على الفعالية.",
-"8. Request to Organize and Advertise Events via the App":"8. اختيار مزودي الخدمة من منظمي الفعاليات",
-"cancellationAndRefund":"• اختيار منظم الفعالية لأحد مزودي الخدمة عند تنظيم فعالية ما هو مسؤولية منظم الفعالية.• تنحصر العلاقة التعاقدية لتنفيذ خدمة ما أو فعالية ما بين منظم الفعالية ومزود الخدمة.• التطبيق غير مسؤول عن تنفيذ الفعاليات ولا يضمن التزامات مزودي الخدمة. ويمكن للتطبيق متابعة التواصل مع مزود الخدمة فقط عند طلب منظم الفعالية.",
-"9. Selection of Service Providers by Event Organizers":"9. الحجز والدفع",
-"privacyAndDataProtection":"• عملية الحجز: يتم حجز التذاكر عبر التطبيق، ويجب على المستخدمين التحقق من تفاصيل الحجز بدقة قبل إتمام العملية. • طرق الدفع: يتم دفع ثمن التذاكر باستخدام وسائل الدفع الإلكتروني المعتمدة والآمنة.",
-"Booking and Payment":"10. الإلغاء واسترداد الأموال",
-"amendmentsToTheTermsbody":"• سياسة الإلغاء: تخضع عمليات الإلغاء لسياسة الإلغاء المحددة من قبل منظم الفعالية وقد تخضع لرسوم أو قيود. •استرداد الأموال: في حالة الموافقة على الإلغاء، يتم استرداد الأموال وفقًا للشروط المحددة، بعد خصم أي رسوم مطبقة.",
-"Cancellation and Refund":"11. Cancellation and Refund",
-
 
 
 
@@ -510,5 +488,50 @@
       "Latakia": "اللاذقية",
       "Rif Dimashq": "ريف دمشق"
     
-    
+      
+      ,  "Introduction": "مقدمة .1",
+        "Introduction_body": "تطبيق \"إيفينتو\" هو منصة رقمية متخصصة في تسويق وحجز الفعاليات المجتمعية. يُرجى قراءة شروط الاستخدام هذه بعناية قبل استخدام التطبيق لضمان فهمك وموافقتك على هذه الشروط."
+       
+        ,  "Acceptance_of_Terms": "2. قبول الشروط",
+          "Acceptance_of_Terms_body": "باستخدامك لتطبيق \"إيفينتو\"، أنت توافق على الالتزام بشروط الاستخدام هذه. إذا كنت لا توافق على هذه الشروط، يجب عليك التوقف فورًا عن استخدام التطبيق."
+        
+        
+        
+     ,     "Account_Registration_and_Security": "3. تسجيل الحساب والأمان",
+          "Account_Registration_and_Security_body": "إنشاء الحساب: يجب تقديم معلومات دقيقة وكاملة عند إنشاء حسابك. يشمل ذلك اسمك، سنك، ورقم الهاتف الخلوي. أمان الحساب: المستخدم مسؤول عن الحفاظ على سرية كلمة المرور وأي معلومات تسجيل أخرى. يجب إبلاغ الإدارة فورًا عن أي استخدام غير مصرح به لحسابك."
+        
+        
+        
+     ,     "Use_of_the_App": "4. استخدام التطبيق",
+          "Use_of_the_App_body": "الاستخدام القانوني: يجب استخدام التطبيق بطريقة قانونية ومسؤولة. يُحظر استخدام التطبيق لأي أغراض غير قانونية أو محظورة. المحتوى المحظور: يُمنع نشر أو تحميل محتوى ينتهك حقوق الآخرين، يحتوي على تهديدات، فحش أو إخلال بالآداب أو الأخلاق العامة، أو يخالف القوانين المحلية والدولية."
+        
+          ,
+            "Intellectual_Property_Rights": "5. حقوق الملكية الفكرية",
+            "Intellectual_Property_Rights_body": "حقوق التطبيق: جميع المحتويات الموجودة على التطبيق، بما في ذلك النصوص، الرسومات، والشعارات، محمية بحقوق الملكية الفكرية وتعود ملكيتها لتطبيق \"إيفينتو\" أو لمزودي المحتوى ومزودي الخدمة المسجلين والمعتمدين في التطبيق."
+        ,    "Event_Advertising": "6. الإعلان عن الفعالية",
+            "Event_Advertising_body": "يعلن التطبيق عن الفعاليات بعد دراسة طلب الإعلان المقدم من المعلن. تقع على مسؤولية المعلن كافة المسؤوليات القانونية اللاحقة بالفعالية كالحصول على التراخيص والتأكد من عدم مخالفة الفعالية للقانون والآداب والأخلاق العامة."
+         ,   "Registration_as_a_Service_Provider": "7. التسجيل كمزود خدمة",
+            "Registration_as_a_Service_Provider_body": "التسجيل كمزود خدمة يقتضي الامتثال لكافة القوانين واللوائح الوطنية الناظمة لحماية المستهلك والمنافسة التجارية وكافة القوانين الأخرى ذات الصلة. التسجيل كمزود خدمة على التطبيق يقتضي التعاقد مع التطبيق بشروط استخدام منفصلة."
+          ,  "Organizing_and_Advertising_Events_via_the_App": "8. تنظيم والإعلان عن الفعاليات عبر التطبيق",
+            "Organizing_and_Advertising_Events_via_the_App_body": "تقع على مسؤولية المعلن كافة المسؤوليات القانونية اللاحقة بالفعالية كالحصول على التراخيص والتأكد من عدم مخالفة الفعالية للقانون والآداب والأخلاق العامة."
+          ,  "Selecting_Service_Providers_by_Event_Organizers": "9. اختيار مزودي الخدمة من منظمي الفعاليات",
+            "Selecting_Service_Providers_by_Event_Organizers_body": "اختيار منظم الفعالية لأحد مزودي الخدمة عند تنظيم فعالية ما هو مسؤولية منظم الفعالية. تنحصر العلاقة التعاقدية لتنفيذ خدمة ما أو فعالية ما بين منظم الفعالية ومزود الخدمة."
+          ,  "Booking_and_Payment": "10. الحجز والدفع",
+            "Booking_and_Payment_body": "عملية الحجز: يتم حجز التذاكر عبر التطبيق، ويجب على المستخدمين التحقق من تفاصيل الحجز بدقة قبل إتمام العملية. يمكن دعوة أشخاص لحضور الفعالية وذلك باختيارهم من قائمة الأصدقاء فقط. طرق الدفع: يتم دفع ثمن التذاكر باستخدام وسائل الدفع الإلكتروني المعتمدة والآمنة. إعادة بيع التذكرة: يجوز ولمرة واحدة فقط إعادة بيع التذكرة المخصصة لفعالية محددة وتترب عمولة للتطبيق لقاء عملية إعادة البيع."
+          ,  "Cancellation_and_Refund": "11. الإلغاء واسترداد الأموال",
+            "Cancellation_and_Refund_body": "سياسة الإلغاء: تخضع عمليات الإلغاء لسياسة الإلغاء المحددة من قبل منظم الفعالية وقد تخضع لرسوم أو قيود. استرداد الأموال: في حالة الموافقة على الإلغاء، يتم استرداد الأموال وفقًا للشروط المحددة، بعد خصم أي رسوم مطبقة."
+          ,  "Privacy_and_Data_Protection": "12. الخصوصية وحماية البيانات",
+            "Privacy_and_Data_Protection_body": "حماية البيانات: يلتزم التطبيق بحماية خصوصية المستخدمين وبياناتهم الشخصية. استخدام البيانات: يتم استخدام البيانات المجمعة لتحسين التجربة على التطبيق وتقديم خدمات مخصصة."
+          ,  "Amendments_to_the_Terms": "13. التعديلات على الشروط",
+            "Amendments_to_the_Terms_body": "تغييرات الشروط: يحتفظ التطبيق بالحق في تعديل شروط الاستخدام في أي وقت. يُعتبر استمرار استخدام التطبيق بعد أي تعديلات موافقة على هذه التغييرات."
+          ,  "Disclaimer_and_Limitations": "14. إخلاء المسؤولية وحدودها",
+            "Disclaimer_and_Limitations_body": "إخلاء المسؤولية: يقدم التطبيق خدماته \"كما هي\" دون أي ضمانات. لا يتحمل التطبيق المسؤولية عن أي أضرار ناتجة عن استخدام أو عدم القدرة على استخدام التطبيق."
+          ,  "Contact_and_Support": "15. الاتصال والدعم",
+            "Contact_and_Support_body": "الدعم: لأي استفسارات أو مخاوف بخصوص شروط الاستخدام، يرجى التواصل مع فريق دعم التطبيق."
+          ,  "Acceptance_of_Terms_final": "باستخدامك لتطبيق \"إيفينتو\"، فإنك تقر وتوافق على الالتزام بهذه الشروط."
+          
+          
+          
+        
+      
 }
