--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -559,6 +559,9 @@
 "حذف الحساب",
 "Yes, Delete":
 "نعم، حذف"
-
-      
+,
+"MTN Payment Number":
+"رقم الدفع من MTN"
+,"You have booked 1 Tickets Successfully in event":"لقد حجزت تذكرة واحدة بنجاح في الحدث",
+"Booked Successfully":"تم الحجز بنجاح"
 }
