--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -348,6 +348,7 @@
 "In Review": "قيد المراجعة",
 "Contacted": "تم الاتصال",
 "Follow": "تابع",
+"UnFollow":"الغاء المتابعة",
 "Popular on Evanto": "الشهير على Evento",
 "Search": "بحث",
 "VIEW MAP": "عرض الخريطة",
