--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -336,6 +336,8 @@
 "In Review": "In Review",
 "Contacted": "Contacted",
 "Follow": "Follow",
+"UnFollow":"UnFollow",
+
 "Popular on Evanto": "Popular on Evanto",
 "Search": "Search",
 "VIEW MAP": "VIEW MAP",
