--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -568,6 +568,11 @@
   "selectProfileImage": "الرجاء اختيار صورة الملف الشخصي",
   "selectCoverImage": "الرجاء اختيار صورة الغلاف",
   "selectLocation": "الرجاء اختيار موقعك"
-
+  ,"requestBody":
+  
+"لتحسين تجربتك، نقترح السماح لـ 'Evento' بتجاوز تحسينات استهلاك البطارية. هذا يضمن إشعارات موثوقة وتشغيل سلس، حتى عند العمل في الخلفية."
+  
+  ,"requestTitle":"تحسين أداء التطبيق"
+  
 
 }
