--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -573,6 +573,6 @@
 "لتحسين تجربتك، نقترح السماح لـ 'Evento' بتجاوز تحسينات استهلاك البطارية. هذا يضمن إشعارات موثوقة وتشغيل سلس، حتى عند العمل في الخلفية."
   
   ,"requestTitle":"تحسين أداء التطبيق"
-  
-
+  ,
+  "Your reels space is currently empty, but stay tuned for exciting content coming your way soon!":"مساحة الفيديوهات القصيرة الخاصة بك فارغة حاليًا، ولكن ترقبوا المحتوى المثير القادم إليكم قريبًا!"
 }
