--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -555,5 +555,7 @@
 ,"requestBody":"To enhance your experience, we suggest allowing 'Evento' to bypass battery optimizations. This ensures reliable notifications and smooth operation, even in the background."
 ,"requestTitle":"Optimize App Performance",
 "OK, Let's Do It":"OK, Let's Do It",
-"Later":"Later"
-}
+"Later":"Later",
+
+"Your reels space is currently empty, but stay tuned for exciting content coming your way soon!"
+:"Your reels space is currently empty, but stay tuned for exciting content coming your way soon!"}
