--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -556,6 +556,6 @@
 ,"requestTitle":"Optimize App Performance",
 "OK, Let's Do It":"OK, Let's Do It",
 "Later":"Later",
-
+"Switching your account to private hides your attendance at events and the list of accounts you follow. This ensures your engagement and connections remain private, not visible to the public.":"Switching your account to private hides your attendance at events and the list of accounts you follow. This ensures your engagement and connections remain private, not visible to the public.",
 "Your reels space is currently empty, but stay tuned for exciting content coming your way soon!"
 :"Your reels space is currently empty, but stay tuned for exciting content coming your way soon!"}
