--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -524,5 +524,18 @@
   "requestTitle": "تحسين أداء التطبيق",
   "Your reels space is currently empty, but stay tuned for exciting content coming your way soon!": "مساحة الفيديوهات القصيرة الخاصة بك فارغة حاليًا، ولكن ترقبوا المحتوى المثير القادم إليكم قريبًا!",
   "Switching your account to private hides your attendance at events and the list of accounts you follow. This ensures your engagement and connections remain private, not visible to the public.": "تحويل حسابك إلى خاص يخفي حضورك في الأحداث وقائمة الحسابات التي تتابعها. هذا يضمن بقاء تفاعلك واتصالاتك خاصة، غير مرئية للعامة.",
-  "powered by ": "مُدعَم بواسطة "
+  "powered by ": "مُدعَم بواسطة ",
+  "resellConfirm":"ايفنتو لا يشارك في تحويلات الدفع بين المستخدمين. التعامل يكون على مسؤوليتك الخاصة.",
+  
+  "More Options": "مزيد من الخيارات",
+  "Resell Ticket": "إعادة بيع التذكرة",
+  "ReSell":"إعادة بيع",
+  "I'm sick,  can't come":"أنا مريض، لا أستطيع الحضور."
+
+
+
+
+
+
+
 }
