--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -559,4 +559,13 @@
 "Switching your account to private hides your attendance at events and the list of accounts you follow. This ensures your engagement and connections remain private, not visible to the public.":"Switching your account to private hides your attendance at events and the list of accounts you follow. This ensures your engagement and connections remain private, not visible to the public.",
 "Your reels space is currently empty, but stay tuned for exciting content coming your way soon!"
 :"Your reels space is currently empty, but stay tuned for exciting content coming your way soon!",
-"powered by ":"powered by "}
+"powered by ":"powered by ",
+
+"resellConfirm":"Evento is not involved in payment transactions between users. Deal at your own risk."
+
+,
+  "More Options": "More Options",
+  "Resell Ticket": "Resell Ticket",
+"ReSell":"Resell",
+"I'm sick,  can't come":"I'm sick,  can't come"
+}
