--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -379,8 +379,8 @@
   "19/7/1999": "١٩/٧/١٩٩٩",
   "Date of Birth": "تاريخ الميلاد",
   "+963 900000000": "+٩٦٣ ٩٠٠٠٠٠٠٠٠",
-  "male": "ذكر",
-  "female": "أنثى",
+  "Male": "ذكر",
+  "Female": "أنثى",
   "Gender": "الجنس",
   "Edit Profile": "تعديل الملف الشخصي",
   "Venue": "المكان",
