--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -127,7 +127,7 @@
   "Personalised program": "Personalised program",
   "Do you want to turn on notification?": "Do you want to turn on notification?",
   "Activate": "Activate",
-  "female": "Female",
+  "Female": "Female",
   "Enter your location": "Enter your location",
   "Please enter where do you live": "Please enter where do you live",
 "Capacity":"Capacity",
@@ -360,7 +360,7 @@
 "Date of Birth": "Date of Birth",
 "+963 900000000": "+963 900000000",
 "Phone Number": "Phone Number",
-"male": "Male",
+"Male": "Male",
 "Gender": "Gender",
 "Edit Profile": "Edit Profile",
 "Select a picturesque setting for your special day": "Select a picturesque setting for your special day",
