complete changing and fix the splash screen

--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -537,6 +537,7 @@
   "More Options": "مزيد من الخيارات",
   "Resell Ticket": "إعادة بيع التذكرة",
   "ReSell":"إعادة بيع",
+  "Yes, ReSell":"نعم، إعادة البيع",
   "I'm sick,  can't come":"أنا مريض، لا أستطيع الحضور."
   
   ,  "error_message": "عذرًا، حدث خطأ. يرجى التأكد من الأسباب المحتملة والمحاولة مرة أخرى لاحقًا:",
