--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -578,6 +578,7 @@
 ,
   "More Options": "More Options",
   "Resell Ticket": "Resell Ticket",
+  "Yes, ReSell":"Yes, ReSell",
 "ReSell":"Resell",
 "I'm sick,  can't come":"I'm sick,  can't come",
 
