--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -341,6 +341,7 @@
 "Contacted": "Contacted",
 "Follow": "Follow",
 "UnFollow":"UnFollow",
+"This event is Ended":"This event is Ended",
 
 "Popular on Evanto": "Popular on Evanto",
 "Search": "Search",
