--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -364,6 +364,7 @@
   "In Review": "قيد المراجعة",
   "Contacted": "تم الاتصال",
   "Follow": "تابع",
+  "No Result":"لا يوجد نتائج",
   "This event is Ended":"هذا الحدث غير موجود",
   "UnFollow": "الغاء المتابعة",
   "Popular on Evanto": "الشهير على Evento",
