--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -390,6 +390,8 @@
  "Local Celebrations & Urban Vibes":"Local Celebrations & Urban Vibes",
  "Lively Gatherings & Illuminated Nights":"Lively Gatherings & Illuminated Nights",
  "Off":"Off",
+ "Please select at least one event category":"Please select at least one event category",
+ "Please select at least one state":"Please select at least one state",
  "Expires at":"Expires at",
  "Event title":"Event title",
  "No current coupons. Exclusive offers will be featured here as they're available.":"No current coupons. Exclusive offers will be featured here as they're available.",
