fix the map and guest permissions

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -561,7 +561,7 @@
       "Ḥamah": "Ḥamah",
       "Homs": "Homs",
       "Idlib": "Idlib",
-      "Latakia": "Latakia",
+      "Latakia": "Lattakia",
       "Rif Dimashq": "Rif Dimashq"
     
 ,      "MTN Payment Number":"MTN Payment Number"
